--- a/client2/package.json
+++ b/client2/package.json
@@ -4,16 +4,20 @@
   "private": true,
   "dependencies": {
     "@fortawesome/fontawesome-svg-core": "^1.2.26",
+    "@fortawesome/free-brands-svg-icons": "^6.2.0",
     "@fortawesome/free-solid-svg-icons": "^5.12.0",
     "@fortawesome/react-fontawesome": "^0.1.8",
+    "@sweetalert/with-react": "^0.1.1",
     "apollo-boost": "^0.4.4",
-
+    "axios": "^1.1.3",
     "bootstrap": "^4.3.1",
+    "chart.js": "^3.9.1",
     "graphql": "^14.4.2",
     "jwt-decode": "^2.2.0",
     "react": "^16.9.0",
     "react-animate-on-scroll": "^2.1.5",
     "react-apollo": "^3.0.1",
+    "react-chartjs-2": "^4.3.1",
     "react-datepicker": "^2.8.0",
     "react-dom": "^16.9.0",
     "react-fontawesome": "^1.7.1",
@@ -23,6 +27,7 @@
     "react-router-dom": "^5.0.1",
     "react-scripts": "3.1.0",
     "reactstrap": "^8.0.1",
+    "sweetalert": "^2.1.2",
     "video-react": "^0.14.1"
   },
   "scripts": {
